# rexora-insights

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: ai.py  audit.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: admin.py  attachments.py  auth.py  cases.py  chat.py  checklists.py  contacts.py  modules.py  tracking.py
src/: main.tsx  routeTree.gen.ts  styles.css
src/components/: RequireAuth.tsx
src/components/admin/: AdminShell.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: admin-api.ts  api.ts  auth-context.tsx  mock-data.ts  module-store.tsx
src/routes/: __root.tsx  attachments.tsx  cases.tsx  chat.tsx  checklists.tsx  contacts.tsx  index.tsx  login.tsx  settings.tsx  tracking.tsx
src/routes/admin/: ai-insights.tsx  audit.tsx  cases.tsx  checklists.tsx  index.tsx  modules.tsx  users.tsx
